force-app/main/default/objects/custom_create70__c/custom_create70__c.object-meta.xml
<CustomObject>
    <label>Custom created object70</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects70</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>