force-app/main/default/objects/custom_create70__c/fields/custom_create_70field555__c.field-meta.xml
<CustomField>
    <fullName>custom_create_70field555__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 70field555</label>
    <type>Checkbox</type>
</CustomField>