force-app/main/default/objects/custom_create70__c/fields/custom_create_70field650__c.field-meta.xml
<CustomField>
    <fullName>custom_create_70field650__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 70field650</label>
    <type>Checkbox</type>
</CustomField>